@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.apache.ignite</groupId>
             <artifactId>ignite-spring-data</artifactId>
-            <version>${ignite.version}</version>
+            <version>${ignite-spring-data.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -57,6 +57,11 @@
             <groupId>org.apache.crunch</groupId>
             <artifactId>crunch-core</artifactId>
             <version>${org.apache.crunch.crunch-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>${javassist.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -133,11 +138,42 @@
             <groupId>com.googlecode.jmapper-framework</groupId>
             <artifactId>jmapper-core</artifactId>
             <version>${jmapper.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.thoughtworks.xstream</groupId>
+                    <artifactId>xstream</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.16</version>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+                        --add-opens jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+                        --add-opens java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                        --add-opens java.base/java.io=ALL-UNNAMED
+                        --add-opens java.base/java.nio=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -166,18 +202,22 @@
     </build>
 
     <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <assembly.plugin.version>2.3</assembly.plugin.version>
-        <httpclient.version>3.0.1</httpclient.version>
+        <httpclient.version>3.1</httpclient.version>
         <storm.version>1.2.2</storm.version>
-        <kafka.version>1.0.0</kafka.version>
-        <ignite.version>2.4.0</ignite.version>
-        <gson.version>2.8.2</gson.version>
+        <kafka.version>3.3.1</kafka.version>
+        <ignite.version>2.14.0</ignite.version>
+        <ignite-spring-data.version>2.9.1</ignite-spring-data.version>
+        <gson.version>2.9.1</gson.version>
         <cache.version>1.1.1</cache.version>
         <flink.version>1.5.0</flink.version>
-        <hazelcast.version>3.8.4</hazelcast.version>
-        <org.apache.crunch.crunch-core.version>0.15.0</org.apache.crunch.crunch-core.version>
+        <hazelcast.version>5.2.0</hazelcast.version>
+        <org.apache.crunch.crunch-core.version>1.0.0</org.apache.crunch.crunch-core.version>
         <org.apache.hadoop.hadoop-client>2.2.0</org.apache.hadoop.hadoop-client>
         <jmapper.version>1.6.0.1</jmapper.version>
+        <javassist.version>3.29.2-GA</javassist.version>
     </properties>
 
 </project>
