@@ -3,11 +3,16 @@
     xmlns="http://maven.apache.org/POM/4.0.0"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.baeldung</groupId>
     <artifactId>ninja</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
     <url>http://www.ninjaframework.org</url>
+
+    <parent>
+        <groupId>com.baeldung</groupId>
+        <artifactId>web-modules</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
     <dependencies>
         <dependency>
@@ -165,7 +170,7 @@
                         <configuration>
                             <transformers>
                                 <transformer
-                                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>ninja.standalone.NinjaJetty</mainClass>
@@ -174,6 +179,15 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
         <resources>
@@ -200,10 +214,9 @@
         <jetty.version>9.4.18.v20190429</jetty.version>
         <bootstrap.version>3.3.4</bootstrap.version>
         <jquery.version>2.1.3</jquery.version>
-        <h2.version>1.4.186</h2.version>
         <compiler.plugin.version>3.2</compiler.plugin.version>
-        <source.version>1.8</source.version>
-        <target.version>1.8</target.version>
+        <source.version>17</source.version>
+        <target.version>17</target.version>
         <enforcer.plugin.version>1.3.1</enforcer.plugin.version>
         <deploy.plugin.version>2.8.2</deploy.plugin.version>
         <shade.plugin.version>2.2</shade.plugin.version>
